// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display facet item list 1`] = `
<FacetBox>
  <FacetHeader
    name="Reliability"
    onClick={[Function]}
    open={true}
    values={0}
  />
  <FacetItemsList>
    <FacetItem
      active={false}
      disabled={false}
      halfWidth={false}
      name={
        <Tooltip
          mouseEnterDelay={0.5}
          overlay="component_measures.domain_x_overview.Reliability"
          placement="bottom"
        >
          <span
            id="measure-overview-Reliability-name"
          >
            component_measures.domain_x_overview.Reliability
          </span>
        </Tooltip>
      }
      onClick={[Function]}
      stat={
        <BubblesIcon
          size={14}
        />
      }
      value="Reliability"
    />
    <FacetItem
      active={false}
      disabled={false}
      halfWidth={false}
      name={
        <Tooltip
          mouseEnterDelay={0.5}
          overlay="New Bugs"
          placement="bottom"
        >
          <span
            id="measure-new_bugs-name"
          >
            <IssueTypeIcon
              className="little-spacer-right"
              query="new_bugs"
            />
            New Bugs
          </span>
        </Tooltip>
      }
      onClick={[Function]}
      stat={
        <FacetMeasureValue
          measure={
            Object {
              "leak": "5",
              "metric": Object {
                "domain": "Reliability",
                "key": "new_bugs",
                "name": "New Bugs",
                "type": "INT",
              },
              "periods": Array [
                Object {
                  "index": 1,
                  "value": "5",
                },
              ],
            }
          }
        />
      }
      value="new_bugs"
    />
    <FacetItem
      active={false}
      disabled={false}
      halfWidth={false}
      name={
        <Tooltip
          mouseEnterDelay={0.5}
          overlay="Bugs"
          placement="bottom"
        >
          <span
            id="measure-bugs-name"
          >
            <IssueTypeIcon
              className="little-spacer-right"
              query="bugs"
            />
            Bugs
          </span>
        </Tooltip>
      }
      onClick={[Function]}
      stat={
        <FacetMeasureValue
          measure={
            Object {
              "leak": "5",
              "metric": Object {
                "domain": "Reliability",
                "key": "bugs",
                "name": "Bugs",
                "type": "INT",
              },
              "periods": Array [
                Object {
                  "index": 1,
                  "value": "5",
                },
              ],
              "value": "5",
            }
          }
        />
      }
      value="bugs"
    />
  </FacetItemsList>
</FacetBox>
`;

exports[`should display facet item list with bugs selected 1`] = `
<FacetBox>
  <FacetHeader
    name="Reliability"
    onClick={[Function]}
    open={true}
    values={1}
  />
  <FacetItemsList>
    <FacetItem
      active={false}
      disabled={false}
      halfWidth={false}
      name={
        <Tooltip
          mouseEnterDelay={0.5}
          overlay="component_measures.domain_x_overview.Reliability"
          placement="bottom"
        >
          <span
            id="measure-overview-Reliability-name"
          >
            component_measures.domain_x_overview.Reliability
          </span>
        </Tooltip>
      }
      onClick={[Function]}
      stat={
        <BubblesIcon
          size={14}
        />
      }
      value="Reliability"
    />
    <FacetItem
      active={false}
      disabled={false}
      halfWidth={false}
      name={
        <Tooltip
          mouseEnterDelay={0.5}
          overlay="New Bugs"
          placement="bottom"
        >
          <span
            id="measure-new_bugs-name"
          >
            <IssueTypeIcon
              className="little-spacer-right"
              query="new_bugs"
            />
            New Bugs
          </span>
        </Tooltip>
      }
      onClick={[Function]}
      stat={
        <FacetMeasureValue
          measure={
            Object {
              "leak": "5",
              "metric": Object {
                "domain": "Reliability",
                "key": "new_bugs",
                "name": "New Bugs",
                "type": "INT",
              },
              "periods": Array [
                Object {
                  "index": 1,
                  "value": "5",
                },
              ],
            }
          }
        />
      }
      value="new_bugs"
    />
    <FacetItem
      active={true}
      disabled={false}
      halfWidth={false}
      name={
        <Tooltip
          mouseEnterDelay={0.5}
          overlay="Bugs"
          placement="bottom"
        >
          <span
            id="measure-bugs-name"
          >
            <IssueTypeIcon
              className="little-spacer-right"
              query="bugs"
            />
            Bugs
          </span>
        </Tooltip>
      }
      onClick={[Function]}
      stat={
        <FacetMeasureValue
          measure={
            Object {
              "leak": "5",
              "metric": Object {
                "domain": "Reliability",
                "key": "bugs",
                "name": "Bugs",
                "type": "INT",
              },
              "periods": Array [
                Object {
                  "index": 1,
                  "value": "5",
                },
              ],
              "value": "5",
            }
          }
        />
      }
      value="bugs"
    />
  </FacetItemsList>
</FacetBox>
`;
